--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <a id="hangman" class="anchor" href="#hangman" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hangman</h3>
 
 <p>A simple game of hangman made with C++.
-<a href="https://hangman_v2.2.exe/">Download</a></p>
+<a href="./hangman_v2.2.exe">Download</a></p>
       </section>
     </div>
 
