--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <h3>
 <a id="hangman" class="anchor" href="#hangman" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hangman</h3>
 
-<p>A simple game of hangman made with C++.
-<a href="./hangman_v2.2.exe">Download</a></p>
+<p>A simple game of hangman made with C++.</p>
+<p></p><a href="./hangman_v2.2.exe">Download</a><br>Your antivirus software may display a false alert.</p>
       </section>
     </div>
 
