--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <a id="hangman" class="anchor" href="#hangman" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hangman</h3>
 
 <p>A simple game of hangman made with C++.</p>
-<p></p><a href="./hangman.exe">Download</a><br>Your antivirus software may display a false alert.</p>
+<p></p><a href="./hangman.exe">Download</a><br>Your antivirus software may display a false alert.<br>SHA-256: f6cb0d8b6fdb6480d1a89eb781e39286db9fafc2dd09a01f9b9b6af7359964f6</p>
       </section>
     </div>
 
