--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Hangman by linybear</title>
+    <title>Hangman by linusaurusrex</title>
   </head>
 
   <body>
@@ -19,9 +19,9 @@
         <h2>hangman game</h2>
 
         <section id="downloads">
-          <a href="https://github.com/linybear/hangman/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/linybear/hangman/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/linybear/hangman" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/linusaurusrex/hangman/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/linusaurusrex/hangman/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/linusaurusrex/hangman" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
